--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,33 @@
-title: Your Company Name
-email: hub-contact@example.com
-description: >
-  Our company's internal company hub
+# Set this to your company or organization name
+organization_name: Our Company Hub
+
+mission_statement: >
+  Providing a foundation for<br />
+  a basic internal company hub
+
+vision_statement: >
+  A world where even the smallest organizations
+  are efficient to navigate effectively
+
+# Track the usage of your company hub with analytics
+google_analytics: ""
+
+# Set this to "" for sites hosted at root of subdomain
+baseurl: "/our-company-hub"
+
 # github_username: ""
 # twitter_username: ""
 # linkedin_username: ""
-google_analytics: ""
+
+collections:
+  core_values:
+    output: false
+  strategic_goals:
+    output: false
+
 exclude:
   - Gemfile
   - Gemfile.lock
   - README.md
   - LICENSE*
   - Makefile
-baseurl: "/our-company-hub" # set this to "" for sites hosted at root of subdomain
