Move personal resources into a collection
Reduce duplication of HTML :)

--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,8 @@ collections:
     output: false
   strategic_goals:
     output: false
+  personal_resources:
+    output: false
 
 exclude:
   - Gemfile
