Add cards for upcoming event

--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,8 @@ collections:
     output: false
   strategic_goals:
     output: false
+  upcoming_events:
+    output: false
   personal_resources:
     output: false
   work_resources:
