--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,9 @@
 # Set this to your company or organization name
 organization_name: Our Company Hub
 
+# Set this to your company URL or leave blank to use your Hub home
+organization_url: ""
+
 mission_statement: >
   Providing a foundation for<br />
   a basic internal company hub
