Revert mistakenly commited change to baseurl

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ vision_statement: >
 google_analytics: ""
 
 # Set this to "" for sites hosted at root of subdomain
-baseurl: ""
+baseurl: "/our-company-hub"
 
 permalink: /:title/
 
