Clean up the organization branding

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Set this to your company or organization name
-organization_name: Hub
+organization_name: ""
 
 # Set this to your organization URL or leave blank to use your Hub home
 organization_url: ""
