Remove every reference to 'company'
Hub is for all organizations, whether they are a company or just
a group of people

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-# Set this to your company or organization name
+# Set this to your organization name
 organization_name: ""
 
 # Set this to your organization URL or leave blank to use your Hub home
