Add ability to make subcards out of a collection

--- a/_config.yml
+++ b/_config.yml
@@ -60,6 +60,8 @@ collections:
     output: true
   work-resources:
     output: true
+  hr-docs:
+    output: true
   auth:
     output: true
     permalink: /auth/:title.html
