--- a/_config.yml
+++ b/_config.yml
@@ -55,11 +55,20 @@ collections:
   strategic-goals:
     output: false
   upcoming-events:
+    title: Upcoming Events
+    has_resource_cards: true
     output: true
+    sort_order: 1
   personal-resources:
+    title: Personal Resources
+    has_resource_cards: true
     output: true
+    sort_order: 2
   work-resources:
+    title: Work Resources
+    has_resource_cards: true
     output: true
+    sort_order: 3
   hr-docs:
     output: true
   auth:
