--- a/_config.yml
+++ b/_config.yml
@@ -59,21 +59,19 @@ collections:
     has_resource_cards: true
     output: true
     sort_order: 1
-    bg_color: "#fbc02d"
-    fg_color: "#616161"
+    bg_color: "#119da4"
   personal-resources:
     title: Personal Resources
     has_resource_cards: true
     output: true
     sort_order: 2
-    bg_color: "#0288d1"
+    bg_color: "#4b3f72"
   work-resources:
     title: Work Resources
     has_resource_cards: true
     output: true
     sort_order: 3
-    bg_color: "#616161"
-    fg_color: "#afb42b"
+    bg_color: "#19647e"
   hr-docs:
     output: true
   auth:
